# subtractor

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  auth.go  docker-compose.yml  go.mod  handlers.go  main.go  main_test.go  media.go  pyproject.toml  store.go  subtractor.spec
scripts/: build.ps1  download-ffmpeg.ps1  download-ffmpeg.sh
subtractor/: __init__.py  __main__.py  core.py  gui.py
tests/: test_core.py
web/: app.js  index.html  style.css
