[project]
name = "subtractor"
version = "1.0.0"
description = "SUBtitle exTRACTOR — batch extract text subtitles from video files via ffmpeg"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
keywords = ["subtitles", "ffmpeg", "video", "extractor"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video :: Conversion",
]

[project.urls]
Homepage = "https://github.com/steveharsant/subtractor"

[project.scripts]
subtractor = "subtractor.__main__:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.10",
    "pytest>=8.0",
]
build = ["pyinstaller>=6.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
